public/style.css
img.small-cover {
    max-width: 50px;
}

.clickable, a[data-ng-click] {
    cursor: pointer;
}


#container {
    position: relative;
}

#nav-menu {
    position: fixed;
    background-color: white;
}

#nav-menu + * {
    margin-top: 37px;
}

nav .nav-wrapper {
    display: inline-block;
}

nav .nav.nav-list {
    float: left;
    text-align: center;
}

.fullscreen {
    background-color: rgba(0,0,0,0.5);
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

.videoPlayer {
    position: fixed;
    top: 5%;
    left: 5%;
    width: 90%;
    height: 90%;
}

